--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,9 @@ a{
 }
 *{
     margin:0; padding:0;
+    div{
+        cursor: default;
+    }
 }
 @font-face {
     font-family: 'Cafe24SsurroundAir';
@@ -21,15 +24,14 @@ body{
     overflow-x: hidden;
     font-family: 'Cafe24SsurroundAir';
 }
+:root{
+    --font-section-padding: 80px;
+}
 
 #slider{
     width: 100%; height: 100vh;
     background-image:url(../img/intro.png);
     background-size: cover;
-}
-
-.section{
-    width: 100%; height: 100vh;
 }
 
 header{
@@ -72,6 +74,43 @@ header{
                     width: 100%;
                     transform: scale(1);
                 }
+            }
+        }
+    }
+}
+
+.section{
+    width: 100%; height: auto;
+
+    &-one{
+        width: 80%; height: auto;
+        margin:0 auto;
+        display: flex; flex-flow: column;
+
+        &-h1{
+            width: 100%;
+            padding-top: var(--font-section-padding);
+            h1{
+                font-size: 5vw;
+            }
+            p{
+                font-size: 1.2vw;
+            }
+        }
+        &-about{
+            display: flex; justify-content: space-evenly;
+            padding-top: var(--font-section-padding);
+
+            &-profile, &-history, &-license{
+                font-size: 1vw;
+            }
+            &-profile h1, &-history h1, &-license h1{
+                padding-bottom: 10px;
+                margin-bottom: 20px;
+                border-bottom: 6px solid #000;
+            }
+            &-profile p, &-history p, &-license p{
+                padding-bottom: 5px;
             }
         }
     }
