--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,13 @@ a {
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+:root {
+  --font-left-padding: 80px;
+  --font-top-padding: 40px;
 }
 
 @font-face {
@@ -24,18 +31,6 @@ body {
   padding: 0;
   overflow-x: hidden;
   font-family: 'Cafe24SsurroundAir';
-}
-
-#slider {
-  width: 100%;
-  height: 100vh;
-  background-image: url(../img/intro.png);
-  background-size: cover;
-}
-
-.section {
-  width: 100%;
-  height: 100vh;
 }
 
 header {
@@ -111,4 +106,27 @@ header {
   width: 100%;
   -webkit-transform: scale(1);
           transform: scale(1);
+}
+
+#slider {
+  width: 100%;
+  height: 100vh;
+  background-image: url(../img/intro.png);
+  background-size: cover;
+}
+
+.section {
+  width: 100%;
+  height: 200vh;
+  position: relative;
+  top: 0;
+}
+
+.section-one {
+  padding-left: var(--font-left-padding);
+  padding-top: var(--font-top-padding);
+}
+
+.section-one h1 {
+  font-size: 7vw;
 }
