--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,10 +25,22 @@ a{
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'MinSans-Medium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/MinSans-Medium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
 body{
     margin:0; padding:0;
     overflow-x: hidden;
-    font-family: 'Cafe24SsurroundAir';
+    font-family: 'MinSans-Medium';
 }
 :root{
     --font-section-padding: 80px;
@@ -93,36 +105,81 @@ header{
 
 .section{
     width: 100%; height: auto;
+    padding-top: var(--font-section-padding);
 
     &-one{
-        width: 80%; height: auto;
+        width: 100%; height: auto;
         margin:0 auto;
         display: flex; flex-flow: column;
 
-        &-h1{
-            width: 100%;
-            padding-top: var(--font-section-padding);
+        &-show1, &-show2{
+            width: 100%; height:25vh;
+            display: flex; align-items: center;
             h1{
-                font-size: 5vw;
-            }
-            p{
-                font-size: 1.2vw;
+                font-size:10vw;
             }
         }
+        &-show1{
+            justify-content: flex-start;
+            padding-left: var(--font-section-padding);
+            border-bottom: 5px solid #000;
+        }
+        &-show2{
+            justify-content: flex-end;
+            padding-right: var(--font-section-padding);
+            -webkit-text-stroke: 1px black;
+            color:rgba(0, 0, 0, 0);
+        }
         &-about{
-            display: flex; justify-content: space-evenly;
-            padding-top: var(--font-section-padding);
+            display: flex; align-items: center;
 
-            &-profile, &-history, &-license{
-                font-size: 1vw;
+            &-1{
+                width: 57%; height: 110vh;
+                font-size: 7vw;
+                background-color: #9e99c7;
+                padding-left: var(--font-section-padding);
+                h1{
+                    -webkit-text-stroke: 1px #fff;
+                    color:rgba(0, 0, 0, 0);
+                    background-image: linear-gradient(90deg, white 0%, white 50%, transparent 50.1%);
+                    background-size: 0% 100%;
+                    transition: background-size .5s cubic-bezier(0.67, 0.01, 0.15, 0.98);
+                    -webkit-background-clip: text;
+                    background-repeat: no-repeat;
+                    &:hover{
+                        background-size: 200% 100%;
+                    }
+                }
             }
-            &-profile h1, &-history h1, &-license h1{
-                padding-bottom: 10px;
-                margin-bottom: 20px;
-                border-bottom: 6px solid #000;
-            }
-            &-profile p, &-history p, &-license p{
-                padding-bottom: 5px;
+            &-2{
+                width: 43%; height: 110vh;
+
+                &-profile{
+                    width: 100%; height: 100%;
+                    display:flex;
+                    p{
+                        font-size:2vw;
+                        font-family: 'Pretendard-Regular';
+                        &:nth-of-type(1){
+                            font-weight: bold;
+                        }
+                    }
+                    img{
+                        width: 20vw;
+                    }
+                }
+
+                &-history{
+                    width: 100%; height: 100%;
+                    background-color: orangered;
+                    display:none;
+                }
+                
+                &-license{
+                    width: 100%; height: 100%;
+                    background-color: pink;
+                    display:none;
+                }
             }
         }
     }
