--- a/css/main.css
+++ b/css/main.css
@@ -10,45 +10,41 @@ a {
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: "Pretendard-Regular";
 }
 
 :root {
   --font-left-padding: 80px;
   --font-top-padding: 40px;
 }
-
 :root div {
   cursor: default;
 }
 
 @font-face {
-  font-family: 'Cafe24SsurroundAir';
+  font-family: "Cafe24SsurroundAir";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24SsurroundAir.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'MinSans-Medium';
+  font-family: "MinSans-Medium";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/MinSans-Medium.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard-Regular';
+  font-family: "Pretendard-Regular";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
-
 body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  font-family: 'MinSans-Medium';
+  font-family: "Pretendard-Regular";
 }
 
 :root {
@@ -73,8 +69,7 @@ header {
   right: 1%;
   top: 2%;
   z-index: 10;
-  -webkit-filter: invert(1);
-          filter: invert(1);
+  filter: invert(1);
   cursor: pointer;
 }
 
@@ -82,23 +77,13 @@ header {
   margin: 0;
   padding: 0;
 }
-
 #overlay #overlay-min {
   width: 100%;
   height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
   opacity: 0;
   position: fixed;
   top: -100%;
@@ -106,18 +91,15 @@ header {
   background-image: url(../img/menu.png);
   background-size: cover;
 }
-
 #overlay #overlay-min li {
   padding: 0.5%;
 }
-
 #overlay #overlay-min li a {
   font-size: 2.5vw;
   font-weight: bold;
   color: #fff;
   position: relative;
 }
-
 #overlay #overlay-min li a:after {
   content: "";
   width: 0;
@@ -127,14 +109,11 @@ header {
   bottom: 0;
   display: inline-block;
   border-bottom: 3px solid #fff;
-  -webkit-transition: .35s ease-in-out;
-  transition: .35s ease-in-out;
+  transition: 0.35s ease-in-out;
 }
-
 #overlay #overlay-min li a:hover:after {
   width: 100%;
-  -webkit-transform: scale(1);
-          transform: scale(1);
+  transform: scale(1);
 }
 
 #slider {
@@ -149,121 +128,159 @@ header {
   height: auto;
   padding-top: var(--font-section-padding);
 }
-
 .section-one {
   width: 100%;
   height: auto;
   margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+  flex-flow: column;
 }
-
 .section-one-show1, .section-one-show2 {
   width: 100%;
   height: 25vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .section-one-show1 h1, .section-one-show2 h1 {
   font-size: 10vw;
 }
-
 .section-one-show1 {
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  justify-content: flex-start;
   padding-left: var(--font-section-padding);
   border-bottom: 5px solid #000;
 }
-
 .section-one-show2 {
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  justify-content: flex-end;
   padding-right: var(--font-section-padding);
   -webkit-text-stroke: 1px black;
   color: rgba(0, 0, 0, 0);
 }
-
-.section-one-about {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+.section-one-show3 {
+  width: 100%;
+  height: auto;
+  text-align: center;
+  padding-bottom: var(--font-section-padding);
+  padding-top: var(--font-section-padding);
 }
-
+.section-one-show3 h1 {
+  font-size: 1.5vw;
+}
+.section-one-about {
+  display: flex;
+  align-items: center;
+}
 .section-one-about-1 {
-  width: 57%;
-  height: 110vh;
+  width: 60%;
+  height: 95vh;
   font-size: 7vw;
   background-color: #9e99c7;
   padding-left: var(--font-section-padding);
 }
-
 .section-one-about-1 h1 {
   -webkit-text-stroke: 1px #fff;
   color: rgba(0, 0, 0, 0);
-  background-image: -webkit-gradient(linear, left top, right top, from(white), color-stop(50%, white), color-stop(50.1%, transparent));
   background-image: linear-gradient(90deg, white 0%, white 50%, transparent 50.1%);
   background-size: 0% 100%;
-  -webkit-transition: background-size 0.5s cubic-bezier(0.67, 0.01, 0.15, 0.98);
   transition: background-size 0.5s cubic-bezier(0.67, 0.01, 0.15, 0.98);
   -webkit-background-clip: text;
   background-repeat: no-repeat;
 }
-
 .section-one-about-1 h1:hover {
   background-size: 200% 100%;
 }
-
 .section-one-about-2 {
-  width: 43%;
-  height: 110vh;
+  width: 40%;
+  height: 95vh;
 }
-
 .section-one-about-2-profile {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
+  align-items: center;
+  flex-flow: column;
+  justify-content: center;
 }
-
 .section-one-about-2-profile p {
-  font-size: 2vw;
-  font-family: 'Pretendard-Regular';
+  font-size: 1.5vw;
+  font-family: "Pretendard-Regular";
+  text-align: center;
 }
-
 .section-one-about-2-profile p:nth-of-type(1) {
   font-weight: bold;
+  font-size: 2vw;
+  padding-bottom: 10px;
 }
-
 .section-one-about-2-profile img {
   width: 20vw;
 }
-
 .section-one-about-2-history {
   width: 100%;
   height: 100%;
-  background-color: orangered;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
   display: none;
+  text-align: center;
+  font-size: 1.5vw;
+  font-weight: normal;
 }
-
+.section-one-about-2-history p:nth-of-type(1) {
+  padding-bottom: 10px;
+}
 .section-one-about-2-license {
   width: 100%;
   height: 100%;
-  background-color: pink;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
   display: none;
+  font-size: 1.5vw;
+}
+.section-one-about-2-license p:nth-of-type(1) {
+  padding-bottom: 10px;
+}
+.section-two {
+  width: 100%;
+  height: auto;
+  padding-top: var(--font-section-padding);
+}
+.section-two-show1, .section-two-show2 {
+  width: 100%;
+  height: 25vh;
+  display: flex;
+  align-items: center;
+}
+.section-two-show1 h1, .section-two-show2 h1 {
+  font-size: 10vw;
+}
+.section-two-show1 {
+  justify-content: flex-end;
+  padding-right: var(--font-section-padding);
+  border-bottom: 5px solid #000;
+}
+.section-two-show2 {
+  justify-content: flex-start;
+  padding-left: var(--font-section-padding);
+  -webkit-text-stroke: 1px black;
+  color: rgba(0, 0, 0, 0);
+}
+.section-two-bg {
+  width: 100%;
+  height: 100vh;
+  background-image: url(../img/skils2.png);
+  background-size: cover;
+}
+.section-two-skils, .section-two-skils1 {
+  width: 100%;
+  height: auto;
+  padding-top: var(--font-section-padding);
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.section-two-skils p, .section-two-skils1 p {
+  font-size: 1.2vw;
+  padding: 5px;
 }
