--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@ a{
 *{
     margin:0; padding:0;
     box-sizing: border-box;
+    font-family: 'Pretendard-Regular';
 }
 :root{
     --font-left-padding: 80px;
@@ -40,7 +41,7 @@ a{
 body{
     margin:0; padding:0;
     overflow-x: hidden;
-    font-family: 'MinSans-Medium';
+    font-family: 'Pretendard-Regular';
 }
 :root{
     --font-section-padding: 80px;
@@ -130,11 +131,20 @@ header{
             -webkit-text-stroke: 1px black;
             color:rgba(0, 0, 0, 0);
         }
+        &-show3{
+            width: 100%; height: auto;
+            text-align: center;
+            padding-bottom: var(--font-section-padding);
+            padding-top: var(--font-section-padding);
+            h1{
+                font-size: 1.5vw;
+            }
+        }
         &-about{
             display: flex; align-items: center;
 
             &-1{
-                width: 57%; height: 110vh;
+                width: 60%; height: 95vh;
                 font-size: 7vw;
                 background-color: #9e99c7;
                 padding-left: var(--font-section-padding);
@@ -152,16 +162,17 @@ header{
                 }
             }
             &-2{
-                width: 43%; height: 110vh;
+                width: 40%; height: 95vh;
 
                 &-profile{
                     width: 100%; height: 100%;
-                    display:flex;
+                    display:flex; align-items: center; flex-flow:column; justify-content: center;
                     p{
-                        font-size:2vw;
-                        font-family: 'Pretendard-Regular';
+                        font-size:1.5vw; font-family: 'Pretendard-Regular';
+                        text-align: center;
                         &:nth-of-type(1){
-                            font-weight: bold;
+                            font-weight: bold; font-size: 2vw;
+                            padding-bottom: 10px;
                         }
                     }
                     img{
@@ -171,15 +182,63 @@ header{
 
                 &-history{
                     width: 100%; height: 100%;
-                    background-color: orangered;
+                    display: flex; justify-content: center; align-items: center; flex-flow: column;
                     display:none;
+                    text-align: center;
+                    font-size: 1.5vw; font-weight: normal;
+                    p:nth-of-type(1){
+                        padding-bottom: 10px;
+                    }
                 }
                 
                 &-license{
                     width: 100%; height: 100%;
-                    background-color: pink;
-                    display:none;
+                    display: flex; justify-content: center; align-items: center; flex-flow: column;
+                    display: none;
+                    font-size: 1.5vw;
+                    p:nth-of-type(1){
+                        padding-bottom: 10px;
+                    }
                 }
+            }
+        }
+    }
+
+    &-two{
+        width: 100%; height: auto;
+        padding-top: var(--font-section-padding);
+
+        &-show1, &-show2{
+            width: 100%; height:25vh;
+            display: flex; align-items: center;
+            h1{
+                font-size:10vw;
+            }
+        }
+        &-show1{
+            justify-content: flex-end;
+            padding-right: var(--font-section-padding);
+            border-bottom: 5px solid #000;
+        }
+        &-show2{
+            justify-content: flex-start;
+            padding-left: var(--font-section-padding);
+            -webkit-text-stroke: 1px black;
+            color:rgba(0, 0, 0, 0);
+        }
+        &-bg{
+            width: 100%; height: 100vh;
+            background-image: url(../img/skils2.png);
+            background-size: cover;
+        }
+        &-skils, &-skils1{
+            width: 100%; height: auto;
+            padding-top: var(--font-section-padding);
+            display: flex; align-items: center; justify-content: space-evenly;
+
+            p{
+                font-size: 1.2vw;
+                padding: 5px;
             }
         }
     }
