--- a/scss/main.scss
+++ b/scss/main.scss
@@ -231,15 +231,79 @@ header{
             background-image: url(../img/skils2.png);
             background-size: cover;
         }
-        &-skils, &-skils1{
+        &-skils{
             width: 100%; height: auto;
             padding-top: var(--font-section-padding);
             display: flex; align-items: center; justify-content: space-evenly;
+            position: relative;
 
             p{
                 font-size: 1.2vw;
                 padding: 5px;
             }
+            .talk1 {
+                width: 20vw; height: 5vw;
+                position: absolute; right: 8%; top: 25%;
+                background-color: #f97338;
+                border-radius: .4em;
+                text-align: center;
+                display: inline-flex; align-items: center; justify-content: center;
+                padding: 10px;
+                color: white;
+            }
+            .talk1:after {
+                content: '';
+                position: absolute;
+                left: 0;
+                top: 50%;
+                width: 0;
+                height: 0;
+                border: 10px solid transparent;
+                border-right-color: #f97338;
+                border-left: 0;
+                margin-top: -10px;
+                margin-left: -10px;
+            }
+            .talk2 {
+                width: 19vw; height: 5vw;
+                position: absolute; right: 5%; top: 65%;
+                background-color: #5381d6;
+                border-radius: .4em;
+                text-align: center;
+                display: inline-flex; align-items: center; justify-content: center;
+                padding: 10px;
+                color: white;
+            }
+            .talk2:after {
+                content: '';
+                position: absolute;
+                left: 0;
+                top: 50%;
+                width: 0;
+                height: 0;
+                border: 10px solid transparent;
+                border-right-color: #5381d6;
+                border-left: 0;
+                margin-top: -10px;
+                margin-left: -10px;
+            }
         }
+    }
+
+    &-three{
+        width: 100%; height: auto;
+        padding-top: var(--font-section-padding);
+
+        &-show{
+            font-size: 1.2vw;
+            display: flex; justify-content: center;
+        }
+    }
+
+    &-four{
+        width: 100%; height: auto;
+        padding-top: var(--font-section-padding);
+
+        
     }
 }
