--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,19 +10,63 @@ a{
 *{
     margin:0; padding:0;
     box-sizing: border-box;
-    font-family: 'Pretendard-Regular';
 }
-:root{
-    --font-left-padding: 80px;
-    --font-top-padding: 40px;
+$parallax-perspective : 1 ;
+$parallax-element     : "body" ;
+$parallax-ios         : true ;
 
-    div{
-        cursor: default;
+@mixin parallax-init(
+  $perspective  : $parallax-perspective,
+  $element      : $parallax-element,
+  $parallax-ios : $parallax-ios
+  ) {
+  @if $element == "body" {
+    html, body {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      scroll-behavior: smooth;
     }
+  }
+  #{$element} {
+    overflow: auto;
+    perspective: $perspective * 1px;
+    transform-style: preserve-3d;
+    // Allows for smooth scrolling but disables parallax effects.
+    @if $parallax-ios == false {
+      -webkit-overflow-scrolling: touch;
+    }
+    // Preserve 3D
+    &, * {
+      transform-style: preserve-3d;
+    }
+  }
 }
+
+@mixin parallax(
+  $distance    : 0,
+  $perspective : $parallax-perspective
+  ) {
+  transform:
+    translateZ($distance * $perspective * 1px)
+    scale(abs($distance - 1))
+  ;
+  z-index: $distance * 100;
+}
+
+@include parallax-init;
+
 @font-face {
     font-family: 'Cafe24SsurroundAir';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24SsurroundAir.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Cafe24Ssurround';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24Ssurround.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -39,18 +83,21 @@ a{
     font-style: normal;
 }
 body{
-    margin:0; padding:0;
     overflow-x: hidden;
-    font-family: 'Pretendard-Regular';
+    font-family: 'Cafe24SsurroundAir';
 }
 :root{
     --font-section-padding: 80px;
+    div{
+        cursor: default;
+    }
 }
 
 #slider{
     width: 100%; height: 100vh;
     background-image:url(../img/intro.png);
     background-size: cover;
+    z-index: -1;
 }
 
 header{
@@ -59,9 +106,16 @@ header{
 
 #open-menu{
     width: 2.5vw;
-    position:fixed; right: 1%; top: 2%; z-index:10;
+    position:fixed; right: 2%; top: 2%; z-index:10;
     filter: invert(1);
     cursor: pointer;
+}
+#open-menu-box{
+    width: 3vw; height: 3vw;
+    position:fixed; right: 1.75%; top: 1.6%; z-index:9;
+    background-color: skyblue;
+    opacity: 0.7;
+    border-radius: 50%;
 }
 
 #overlay{
@@ -71,7 +125,7 @@ header{
         width: 100%; height: 100vh;
         display: flex; flex-flow:column; align-items: center; justify-content: center;
         opacity:0;
-        position:fixed; top: -100%; z-index:9999;
+        position:fixed; top: -100%;
         background-image: url(../img/menu.png);
         background-size:cover;
 
@@ -116,6 +170,7 @@ header{
         &-show1, &-show2{
             width: 100%; height:25vh;
             display: flex; align-items: center;
+            font-family: 'Cafe24Ssurround';
             h1{
                 font-size:10vw;
             }
@@ -136,22 +191,24 @@ header{
             text-align: center;
             padding-bottom: var(--font-section-padding);
             padding-top: var(--font-section-padding);
+            font-family: 'Cafe24SsurroundAir';
             h1{
                 font-size: 1.5vw;
             }
         }
         &-about{
             display: flex; align-items: center;
+            position: relative;
 
             &-1{
                 width: 60%; height: 95vh;
                 font-size: 7vw;
-                background-color: #9e99c7;
                 padding-left: var(--font-section-padding);
+                font-family: 'Cafe24Ssurround';
                 h1{
-                    -webkit-text-stroke: 1px #fff;
+                    -webkit-text-stroke: 1px #000;
                     color:rgba(0, 0, 0, 0);
-                    background-image: linear-gradient(90deg, white 0%, white 50%, transparent 50.1%);
+                    background-image: linear-gradient(90deg, black 0%, black 50%, transparent 50.1%);
                     background-size: 0% 100%;
                     transition: background-size .5s cubic-bezier(0.67, 0.01, 0.15, 0.98);
                     -webkit-background-clip: text;
@@ -168,7 +225,7 @@ header{
                     width: 100%; height: 100%;
                     display:flex; align-items: center; flex-flow:column; justify-content: center;
                     p{
-                        font-size:1.5vw; font-family: 'Pretendard-Regular';
+                        font-size:1.5vw;
                         text-align: center;
                         &:nth-of-type(1){
                             font-weight: bold; font-size: 2vw;
@@ -201,6 +258,20 @@ header{
                     }
                 }
             }
+
+            #deco1, #deco2, #deco3{
+                width: 20vw;
+                position: absolute; z-index:-1;
+            }
+            #deco1{
+                left: 45%; top: 55%
+            }
+            #deco2{
+                left: 80%; top: 25%;
+            }
+            #deco3{
+                top: 10%;
+            }
         }
     }
 
@@ -211,6 +282,7 @@ header{
         &-show1, &-show2{
             width: 100%; height:25vh;
             display: flex; align-items: center;
+            font-family: 'Cafe24Ssurround';
             h1{
                 font-size:10vw;
             }
@@ -229,11 +301,12 @@ header{
         &-bg{
             width: 100%; height: 100vh;
             background-image: url(../img/skils2.png);
-            background-size: cover;
+            background-size: 100% 100%;
         }
         &-skils{
             width: 100%; height: auto;
             padding-top: var(--font-section-padding);
+            margin-top: var(--font-section-padding);
             display: flex; align-items: center; justify-content: space-evenly;
             position: relative;
 
@@ -261,11 +334,12 @@ header{
                 border: 10px solid transparent;
                 border-right-color: #f97338;
                 border-left: 0;
-                margin-top: -10px;
+                border-bottom: 0;
+                margin-top: -13px;
                 margin-left: -10px;
             }
             .talk2 {
-                width: 19vw; height: 5vw;
+                width: 20vw; height: 5vw;
                 position: absolute; right: 5%; top: 65%;
                 background-color: #5381d6;
                 border-radius: .4em;
@@ -287,23 +361,258 @@ header{
                 margin-top: -10px;
                 margin-left: -10px;
             }
+            .talk3 {
+                width: 20vw; height: 5vw;
+                position: absolute; left: 8%; top: 77%;
+                background-color: #ced37e;
+                border-radius: .4em;
+                text-align: center;
+                display: inline-flex; align-items: center; justify-content: center;
+                padding: 10px;
+                color: white;
+            }
+            .talk3:after {
+                content: '';
+                position: absolute;
+                right: 0;
+                top: 50%;
+                width: 0;
+                height: 0;
+                border: 10px solid transparent;
+                border-left-color: #ced37e;
+                border-right: 0;
+                border-top: 0;
+                margin-top: -13px;
+                margin-right: -10px;
+            }
+            .talk4 {
+                width: 16vw; height: 5vw;
+                position: absolute; left: 5%; top: 47%;
+                background-color: #3f3fc6;
+                border-radius: .4em;
+                text-align: center;
+                display: inline-flex; align-items: center; justify-content: center;
+                padding: 10px;
+                color: white;
+            }
+            .talk4:after {
+                content: '';
+                position: absolute;
+                right: 0;
+                top: 50%;
+                width: 0;
+                height: 0;
+                border: 10px solid transparent;
+                border-left-color: #3f3fc6;
+                border-right: 0;
+                margin-top: -10px;
+                margin-right: -10px;
+            }
+            .talk5 {
+                width: 16vw; height: 5vw;
+                position: absolute; left: 13%; top: 24%;
+                background-color: #ffc160;
+                border-radius: .4em;
+                text-align: center;
+                display: inline-flex; align-items: center; justify-content: center;
+                padding: 10px;
+                color: white;
+            }
+            .talk5:after {
+                content: '';
+                position: absolute;
+                right: 0;
+                top: 50%;
+                width: 0;
+                height: 0;
+                border: 10px solid transparent;
+                border-left-color: #ffc160;
+                border-right: 0;
+                border-bottom: 0;
+                margin-top: -10px;
+                margin-right: -10px;
+            }
         }
     }
 
     &-three{
         width: 100%; height: auto;
         padding-top: var(--font-section-padding);
+        margin-top: var(--font-section-padding);
 
         &-show{
-            font-size: 1.2vw;
-            display: flex; justify-content: center;
+            font-size: 4.5vw;
+            border-bottom: 5px solid #000;
+            padding-left: var(--font-section-padding);
+            font-family: 'Cafe24Ssurround';
+        }
+        &-grid{
+            height: auto;
+            display: grid;
+            grid-gap: 30px;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-auto-rows: 160px;
+            grid-auto-flow: row dense;
+            padding-top: var(--font-section-padding);
+
+            &-item{
+                position:relative;
+                display: flex; flex-flow: column; justify-content: flex-end;
+                box-sizing: border-box;
+                grid-column-start: auto;
+                grid-row-start: auto;
+                cursor: pointer;
+                counter-increment: item-counter;
+                background-size: cover;
+                background-position: center;
+                transition: transform 0.3s ease-in-out;
+
+                &:nth-of-type(1){
+                    background-image: url(../img/20220110_150132.png);
+                }
+                &:nth-of-type(2){
+                    background-image: url(../img/2-1.png);
+                }
+                &:nth-of-type(3){
+                    background-image: url(../img/20211207_153719.png);
+                }
+                &:nth-of-type(4){
+                    background-image: url(../img/4-1.jpeg);
+                }
+                &:nth-of-type(5){
+                    background-image: url(../img/5-1.jpeg);
+                }
+                &:nth-of-type(6){
+                    background-image: url(../img/6-1.jpeg);
+                }
+                &:nth-of-type(7){
+                    background-image: url(../img/slider.png);
+                }
+                &:nth-of-type(8){
+                    background-image: url(../img/1.png);
+                }
+                &:after{
+                    content: "";
+                    width: 100%; height: 100%;
+                    position: absolute;
+                    background-color: black;
+                    opacity: 0.3;
+                    transition: opacity 0.3s ease-in-out;
+                }
+                &:hover{
+                    transform: scale(1.05);
+                    &:after{
+                        opacity: 0;
+                    }
+                }
+                &--medium{
+                    grid-row-end: span 2;
+                }
+                &--large{
+                    grid-row-end: span 3;
+                }
+                &--full{
+                    grid-column-end: auto;
+                    @media screen and (min-width: 768px){
+                        grid-column: 2/-1;
+                        grid-row-end: span 3;
+                    }
+                }
+                &-details{
+                    position:relative; z-index:1;
+                    padding: 15px;
+                    color: #444;
+                    background-color: #eee;
+                    letter-spacing: 1px;
+                    &:before{
+                        content: counter(item-counter);
+                        font-weight: bold;
+                        font-size: 1.1rem;
+                        padding-right: 0.5em;
+                        color: #444;
+                    }
+                }
+            }
         }
     }
 
     &-four{
-        width: 100%; height: auto;
         padding-top: var(--font-section-padding);
-
-        
+        margin-top: var(--font-section-padding);
+        &-show1{
+            h1{
+                font-size: 2vw;
+                text-align: center;
+            }
+        }
+        &-image{
+            > * {
+                position: absolute;
+            }
+            padding: 10%;
+            margin: auto;
+            img{
+                cursor: pointer;
+            }
+            :nth-child(1){
+                width: 40vw;
+                @include parallax(-.4);
+                top: 200px; left: -100px;
+            }
+            :nth-child(2){
+                width: 40vw;
+                @include parallax(.2);
+                top: 300px; left: 700px;
+            }
+            :nth-child(3){
+                width: 40vw;
+                @include parallax(.3);
+                top: 800px; left: 200px;
+            }
+            :nth-child(4){
+                width: 40vw;
+                @include parallax(.1);
+                top: 1000px; left: 500px;
+            }
+            :nth-child(5){
+                width: 40vw;
+                @include parallax(-2);
+                top: 1500px; left: 2000px;
+            }
+            :nth-child(6){
+                width: 40vw;
+                @include parallax(.4);
+                top: 1400px; left: 400px;
+            }
+            :nth-child(7){
+                width: 20vw; height: 20vw;
+                @include parallax(-1);
+                top: 800px; left: 200px;
+            }
+            :nth-child(8){
+                width: 20vw; height: 20vw;
+                @include parallax(-1);
+                top: 1500px; left: -300px;
+            }
+            :nth-child(9) {
+                width: 20vw; height: 20vw;
+                @include parallax(.4);
+                top: 800px; left: 800px;
+            }
+            :nth-child(10) {
+                @include parallax(.2);
+                top: 300px; left: 800px;
+                color: rgb(66, 108, 199);
+                font-size: 4vw;
+                mix-blend-mode: difference;
+            }
+            :nth-child(11) {
+                @include parallax(.4);
+                top: 1300px; left: 300px;
+                color: rgb(66, 108, 199);
+                font-size: 3vw;
+                mix-blend-mode: difference;
+            }
+        }
     }
 }
